codegen/tests/ui/next/extra-endpoint-attributes.stderr
error: extra endpoint attribute

         = help: There should only be one endpoint annotation per handler function.

 --> tests/ui/next/extra-endpoint-attributes.rs:2:5
  |
2 | /     #[shuttle_codegen::endpoint(method = get, route = "/hello")]
3 | |     #[shuttle_codegen::endpoint(method = post, route = "/hello")]
4 | |     async fn hello() -> &'static str {
5 | |         "Hello, World!"
6 | |     }
  | |_____^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/next/extra-endpoint-attributes.rs:7:2
  |
7 | }
  |  ^ consider adding a `main` function to `$DIR/tests/ui/next/extra-endpoint-attributes.rs`
